--- a/java-api/cloudbuild.yaml
+++ b/java-api/cloudbuild.yaml
@@ -15,7 +15,7 @@
 steps:
   - name: gcr.io/cloud-builders/gcloud:latest
     entrypoint: "ls"
-    args: ["-lah","/java-api"]
+    args: ["-lah","/workspace"]
   
   - name: maven:3-jdk-8
     entrypoint: mvn
