--- a/java-api/cloudbuild.yaml
+++ b/java-api/cloudbuild.yaml
@@ -13,6 +13,14 @@
 # limitations under the License.
 # [START cloudbuild_maven]
 steps:
+  -name: "gcr.io/cloud-builders/docker"
+    args:
+      [
+        "build",
+        "-t",
+        "gcr.io/my-project/github.com/aditi-chelawat12/Team16_Project.com:$COMMIT_SHA",
+        "./java-api",
+      ]
   - name: maven:3-jdk-8
     entrypoint: mvn
     dir: 'java-api'
